deploy/azure/notification/overlay/develop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notification
  name: notification
spec:
  #replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
       containers:
        - name: notification
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          image: vuongnv/reactjs-notification:latest
          resources:
            limits:
              memory: "1000Mi"
              cpu: "2000m"
            requests:
              memory: "100Mi"
              cpu: "100m"
