deploy/azure/notification/overlay/develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification
  labels:
    app: notification
spec:
  selector:
    app: notification
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
