deploy/azure/notification/overlay/develop/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification
            port:
              number: 80
